# GroundCortex

./: .dockerignore  .env.example  .gitignore  DOCS.md  Dockerfile  README.md  docker-compose.yml  hypothesis.py  pyproject.toml
.github/workflows/: pypi-publish.yml  unit-tests.yml
examples/: EXPERIMENTS.md  hypothesis.example.py  hypothesis.py  run_pipeline.py
groundcortex/: MLX_NOTE.md  __main__.py  config.py  consolidator.py  inference_server.py  mcp_server.py  model_registry.py  request_logger.py  scheduler.py  sweep.py
groundcortex/buffer/: db.py
groundcortex/config/: .env.example  __init__.py
groundcortex/evaluation/: evaluator.py
groundcortex/inference/: manager.py  mlx_manager.py
groundcortex/ingestion/: base.py  file_adapter.py  remote_adapter.py
groundcortex/pipeline/: curriculum.py  generator.py  models.py
groundcortex/static/: regularization.json
groundcortex/training/: mlx_trainer.py  trainer.py
tests/: conftest.py  test_config.py  test_consolidator.py  test_curriculum.py  test_db.py  test_dry_run.py  test_evaluator.py  test_generator.py  test_inference_manager.py  test_inference_server.py  test_ingestion_file.py  test_ingestion_remote.py  test_mcp_server.py  test_mlx_manager.py  test_mlx_trainer.py  test_model_registry.py  test_network_security.py  test_scheduler.py  test_sweep.py  test_trainer.py
