[project]
name = "groundcortex"
version = "0.2.13"
description = "Automated thought consolidation engine for AI agents using LoRA fine-tuning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "transformers",
    "peft",
    "trl",
    "datasets",
    "accelerate",
    "numpy",
    "fastmcp",
    "fastapi",
    "uvicorn",
    "pydantic-settings",
    "httpx",
    "apscheduler",
    "torchao",
]

[project.urls]
Documentation = "https://github.com/huss-mo/GroundCortex/blob/master/DOCS.md"
Issues = "https://github.com/huss-mo/GroundCortex/issues"

[project.optional-dependencies]
mlx = ["mlx-lm"]
test = ["pytest"]

[project.scripts]
groundcortex = "groundcortex.__main__:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["groundcortex"]
artifacts = [
    "groundcortex/config/.env.example",
]

# ---------------------------------------------------------------------------
# PyTorch index configuration
# ---------------------------------------------------------------------------
# By default uv installs the CPU-only torch wheel from PyPI.
# To install a CUDA-enabled wheel, override the index in your local
# uv.toml or run:
#
#   uv pip install torch --index-url https://download.pytorch.org/whl/cu124
#
# For Apple Silicon (MPS), the default PyPI wheel already includes MPS support.
# ---------------------------------------------------------------------------
